@@ -1,11 +1,16 @@
+2000-02-25  Dan Winship  <danw@helixcode.com>
+
+	* *.c: add gtk-doc-style comments
+
 2000-02-21  Matt Loper  <matt@helixcode.com>
 
 	* .cvsignore: Added mkindex.
 
 2000-02-21  NotZed  <NotZed@HelixCode.com>
 
-	* Makefile.am: change noinst_LIBRARIES to noinst_LTLIBRARIES, and supply -static to
-	LDFLAGS.  Duh, and changed LDADD back to libibex.la.
+	* Makefile.am: change noinst_LIBRARIES to noinst_LTLIBRARIES, and
+	supply -static to LDFLAGS.  Duh, and changed LDADD back to
+	libibex.la.
 
 2000-02-20  Matt Loper  <matt@helixcode.com>
 
